add categories and livere

--- a/_config.yml
+++ b/_config.yml
@@ -120,7 +120,7 @@ menu:
   home: / || home
   #about: /about/ || user
   #tags: /tags/ || tags
-  #categories: /categories/ || th
+  categories: /categories/ || th
   archives: /archives/ || archive
   #schedule: /schedule/ || calendar
   #sitemap: /sitemap.xml || sitemap
@@ -506,7 +506,7 @@ valine:
 
 # Support for LiveRe comments system.
 # You can get your uid from https://livere.com/insight/myCode (General web site)
-#livere_uid: your uid
+livere_uid: MTAyMC8zNjEyMS8xMjY1Ng==
 
 # Gitment
 # Introduction: https://imsun.net/posts/gitment-introduction/
