--- a/_config.yml
+++ b/_config.yml
@@ -470,10 +470,10 @@ pangu: false
 
 # Disqus
 disqus:
-  enable: false
-  shortname:
+  enable: true
+  shortname: clip-xxmq
   count: true
-  lazyload: false
+  lazyload: true
 
 # Hypercomments
 #hypercomments_id:
@@ -506,7 +506,7 @@ valine:
 
 # Support for LiveRe comments system.
 # You can get your uid from https://livere.com/insight/myCode (General web site)
-livere_uid: MTAyMC8zNjEyMS8xMjY1Ng==
+# livere_uid: MTAyMC8zNjEyMS8xMjY1Ng==
 
 # Gitment
 # Introduction: https://imsun.net/posts/gitment-introduction/
